--- a/bitrise.yml
+++ b/bitrise.yml
@@ -142,9 +142,10 @@ workflows:
         - generate_code_coverage_files: 'yes'
         - project_path: Datadog.xcworkspace
         - xcpretty_test_options: --color --report html --output "${BITRISE_DEPLOY_DIR}/Datadog-unit-tests.html"
-    - codecov@3:
+    - codecov@2.0.2:
+        title: Send coverage report
         inputs:
-        - OS: macos
+        - CODECOV_TOKEN: ${CODECOV_TOKEN}
     # - xcode-test:
     #     title: Run unit tests for DatadogCrashReporting - iOS Simulator
     #     inputs:
