Adjust `.codeconv.yml` (2)

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -12,7 +12,6 @@ coverage:
   round: nearest
 
 ignore:
-  - "Carthage"
-  - "Datadog"
-  - "Tests"
-  - "tools"
+  - "Carthage/**"
+  - "Datadog/**"
+  - "Tests/**"
